# PSXmenuwave

./: CMakeLists.txt
src/: main.c
